Now using pateketrueke/yrv

--- a/public/data/error/404.md
+++ b/public/data/error/404.md
@@ -2,4 +2,28 @@
 
 O texto que você estava procurando não está entre nós!
 
-![Jamaica Abaixo de Zero - Eles estão em trenós!](../img/jamaicateam.jpg)
+```(language:none)
+ -=[ Santa and sleigh ]=-  11/97
+
+                    _...
+              o_.-"`    `\
+       .--.  _ `'-._.-'""-;     _
+     .'    \`_\_  {_.-a"a-}  _ / \
+   _/     .-'  '. {c-._o_.){\|`  |
+  (@`-._ /       \{    ^  } \\ _/
+   `~\  '-._      /'.     }  \}  .-.
+     |>:<   '-.__/   '._,} \_/  / ())
+     |     >:<   `'---. ____'-.|(`"`
+     \            >:<  \\_\\_\ | ;
+      \                 \\-{}-\/  \
+       \                 '._\\'   /)
+        '.                       /(
+          `-._ _____ _ _____ __.'\ \
+            / \     / \     / \   \ \
+     jgs _.'/^\'._.'/^\'._.'/^\'.__) \
+     ,=='  `---`   '---'   '---'      )
+     `"""""""""""""""""""""""""""""""`
+     It was just a pun between portuguese expressions 'among us' and 'in sleighs'. Sorry :P
+```
+
+[Este cara sim, está em trenós (perdão pelo trocadilho!)](https://asciiart.website/index.php?art=holiday/christmas/santa)
